# talc-rs

./: Cargo.toml
benches/: bench_talc.rs  line_intersect.rs
src/: brush.rs  canvas.rs  lib.rs  line.rs  main.rs  pattern.rs  point.rs  utilities.rs
src/brush/: mod.rs
src/geometry/: angle.rs  line.rs  line_intersect.rs  mod.rs  rect_intersect.rs
src/pattern/: mod.rs
src/primitive/: line.rs  mod.rs  point.rs  text.rs
src/primitives/: mod.rs  point.rs
src/test/: canvas.rs  geometry.rs  line.rs  mod.rs  point.rs  utilities.rs
