[package]
name = "talc"
version = "0.1.4" # Remember to update html_root_url.
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
description = "Talc Graphics Primitive Library"
license = "MIT, Apache 2.0"
readme = "README.md"
keywords = ["gui"]
categories = []
documentation = ""
homepage = ""
repository = "https://github.com/skysch/talc-rs"
exclude = ["*.sublime-project", "*.sublime-workspace"]

[lib]
name = "talc"


[dependencies]
rusttype = "*"

[dev-dependencies]
criterion = { version="0.2", features=['real_blackbox'] }


[[bench]]
name = "bench_talc"
harness = false


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

